dropshot/tests/fail/bad_trait_channel22.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_trait_channel22.rs:18:7
   |
18 | trait MyServer {
   |       ^^^^^^^^

error: endpoint `unsafe_endpoint` must not be unsafe
  --> tests/fail/bad_trait_channel22.rs:26:11
   |
26 |     async unsafe fn unsafe_endpoint(
   |           ^^^^^^
